--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,20 @@ services:
   - docker
 
 before_install:
-  - docker build -t sazzadrupak/frontend-aws-docker - Dockerfile.dev .
+  - docker build -t sazzadrupak/frontend-aws-docker -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true sazzadrupak/frontend-aws-docker npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-892142435482"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
